docs/api/qiskit/0.19/qiskit.aqua.utils.CircuitFactory.mdx
---
title: CircuitFactory (v0.19)
description: API reference for qiskit.aqua.utils.CircuitFactory in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.utils.CircuitFactory
---

# CircuitFactory

<Class id="qiskit.aqua.utils.CircuitFactory" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/utils/circuit_factory.py" signature="CircuitFactory(num_target_qubits)" modifiers="class">
  Base class for CircuitFactories

  ## Attributes

  <span id="circuitfactory-num-target-qubits" />

  ### num\_target\_qubits

  <Attribute id="qiskit.aqua.utils.CircuitFactory.num_target_qubits">
    Returns the number of target qubits
  </Attribute>

  ## Methods

  <span id="circuitfactory-build" />

  ### build

  <Function id="qiskit.aqua.utils.CircuitFactory.build" signature="CircuitFactory.build(qc, q, q_ancillas=None, params=None)" modifiers="abstract">
    Adds corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **params** (*list*) – parameters for circuit
  </Function>

  <span id="circuitfactory-build-controlled" />

  ### build\_controlled

  <Function id="qiskit.aqua.utils.CircuitFactory.build_controlled" signature="CircuitFactory.build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds corresponding controlled sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="circuitfactory-build-controlled-inverse" />

  ### build\_controlled\_inverse

  <Function id="qiskit.aqua.utils.CircuitFactory.build_controlled_inverse" signature="CircuitFactory.build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds controlled inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="circuitfactory-build-controlled-inverse-power" />

  ### build\_controlled\_inverse\_power

  <Function id="qiskit.aqua.utils.CircuitFactory.build_controlled_inverse_power" signature="CircuitFactory.build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="circuitfactory-build-controlled-power" />

  ### build\_controlled\_power

  <Function id="qiskit.aqua.utils.CircuitFactory.build_controlled_power" signature="CircuitFactory.build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="circuitfactory-build-inverse" />

  ### build\_inverse

  <Function id="qiskit.aqua.utils.CircuitFactory.build_inverse" signature="CircuitFactory.build_inverse(qc, q, q_ancillas=None)">
    Adds inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
  </Function>

  <span id="circuitfactory-build-inverse-power" />

  ### build\_inverse\_power

  <Function id="qiskit.aqua.utils.CircuitFactory.build_inverse_power" signature="CircuitFactory.build_inverse_power(qc, q, power, q_ancillas=None)">
    Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="circuitfactory-build-power" />

  ### build\_power

  <Function id="qiskit.aqua.utils.CircuitFactory.build_power" signature="CircuitFactory.build_power(qc, q, power, q_ancillas=None)">
    Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="circuitfactory-get-num-qubits" />

  ### get\_num\_qubits

  <Function id="qiskit.aqua.utils.CircuitFactory.get_num_qubits" signature="CircuitFactory.get_num_qubits()">
    returns number of qubits
  </Function>

  <span id="circuitfactory-get-num-qubits-controlled" />

  ### get\_num\_qubits\_controlled

  <Function id="qiskit.aqua.utils.CircuitFactory.get_num_qubits_controlled" signature="CircuitFactory.get_num_qubits_controlled()">
    returns number of qubits controlled
  </Function>

  <span id="circuitfactory-required-ancillas" />

  ### required\_ancillas

  <Function id="qiskit.aqua.utils.CircuitFactory.required_ancillas" signature="CircuitFactory.required_ancillas()">
    returns required ancillas
  </Function>

  <span id="circuitfactory-required-ancillas-controlled" />

  ### required\_ancillas\_controlled

  <Function id="qiskit.aqua.utils.CircuitFactory.required_ancillas_controlled" signature="CircuitFactory.required_ancillas_controlled()">
    returns required ancillas controlled
  </Function>
</Class>

